--- a/usbSerialExamples/src/main/res/values/strings.xml
+++ b/usbSerialExamples/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_title">USB Serial For Android Example</string>
-    <string name="app_name">USB Serial Example</string>
+    <string name="app_title">Hoot HID Android App Rev 1.0</string>
+    <string name="app_name">Hoot User Interface [Version 1]</string>
     <string name="devices">USB Devices</string>
 </resources>
