--- a/usbSerialExamples/src/main/res/values/strings.xml
+++ b/usbSerialExamples/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="app_name">Hoot User Interface [Version 1]</string>
     <string name="devices">USB Devices</string>
     <string name="buttonTextSize">20sp</string>
+    <string name="action_settings">Settings</string>
+    <string name="high">High</string>
+    <string name="_5l_time">5L Time</string>
+    <string name="time">00:00:00</string>
+    <string name="test">Test</string>
 </resources>
