--- a/usbSerialExamples/src/main/res/values/strings.xml
+++ b/usbSerialExamples/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="_5l_time">5L Time</string>
     <string name="time">00:00:00</string>
     <string name="test">Test</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
